# Ass1---20.11.17

./: .cproject  .project  CMakeLists.txt  Output.txt  README.md  makefile
Ass1/: CMakeLists.txt
Ass1/Debug/: makefile
Ass1/Debug/src/: Directory.d  Main.d
Ass1/include/: Commands.h  Environment.h  FileSystem.h  Files.h
Ass1/src/: BaseFile.cpp  Commands.cpp  Directory.cpp  Environment.cpp  FileSystem.cpp  Files.cpp  FilesTest2.cpp  HistoryCommand.cpp  RmCommand.cpp
Debug/: .gitignore  makefile  sources.mk
Debug/src/: BaseCommand.d  BaseFile.d  Commands.d  Directory.d  Environment.d  FileSystem.d  Files.d  FilesTest1.d  FilesTest2.d  HistoryCommand.d  Main.d  RmCommand.d  Verbose.d  exeCommand.d  generalFunctions.d  rename.d  subdir.mk  testMain.d
include/: Commands.h  Environment.h  FileSystem.h  Files.h  generalFunctions.h
src/: BaseCommand.cpp  Commands.cpp  Directory.cpp  Environment.cpp  FileSystem.cpp  FilesTest1.cpp  HistoryCommand.cpp  Main.cpp  RmCommand.cpp  Verbose.cpp  exeCommand.cpp  generalFunctions.cpp  rename.cpp  testMain.cpp
